loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:6: error: not found: value i
for (n <- i to 7)
          ^