loopfor.LoopStairs.scala.code
var stepAmount: Int = 0 

for (n <- 0 to 3)
{forward();}

for (n <- i to 7)
{
  left();forward();right();forward();
}

for (n <- 0 to 3)
{forward();}